--- a/sections/static-blog-listing.liquid
+++ b/sections/static-blog-listing.liquid
@@ -1,5 +1,8 @@
 <section class="db-section db-section--static-blog-listing">
   <div class="db-container">
+    <h1>
+      The Hairy Dispatch
+    </h1>
     <div class="db-grid-list">
         
       {% assign cats = "media" | split: ',' %}
