--- a/styles/db-theme/sections/static-blog-listing.scss
+++ b/styles/db-theme/sections/static-blog-listing.scss
@@ -2,6 +2,16 @@
   padding: 150px 30px 100px;
 
   .db-container {
+    h1 {
+      color: $white-color;
+      font-family: $primary-font-family;
+      font-size: 40px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 1.5em;
+      margin-bottom: 30px;
+    }
+
     .db-grid-list {
       display: grid;
       grid-template-columns: repeat(4, minmax(250px, 1fr));
